# Gap2Seq

./: .gitignore  .gitmodules  CMakeLists.txt  Gap2Seq.sh  README.md  README.txt
src/: Gap2Seq.cpp  Gap2Seq.hpp  Gap2Seq.py  GapCutter.cpp  GapMerger.cpp  ReadFilter.cpp  main.cpp
